<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDC3E1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#F202073A"
        android:paddingHorizontal="10dp"

        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:id="@+id/ex_layout"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="25sp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:textColor="#FDC3E1"
                android:fontFamily="@font/roboto_bold_italic"
                android:id="@+id/ex_title"
                android:paddingStart="10dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ex_length"
                android:text="@string/subtitle"
                android:textColor="#FDC3E1"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="17dp"
                android:textSize="13sp"
                android:fontFamily="@font/roboto_medium"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_description"
                android:textColor="#FDC3E1"
                android:gravity="top"
                android:textSize="13sp"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="20dp"
                android:layout_below="@id/ex_title"
                android:paddingStart="40dp"
                android:id="@+id/ex_suggestion"
                />


        </RelativeLayout>

    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="19"
        android:id="@+id/lv_exercises"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"

        />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menu_bar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/bottomnav_shape"
        app:itemIconTint="@color/nav_color"
        app:itemTextColor="@color/nav_color"
        app:menu="@menu/menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</LinearLayout>