<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F202073A"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/constraintLayout">

    <LinearLayout
        android:id="@+id/lnlo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/txv_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/shape"
                android:fontFamily="@font/lobster"
                android:paddingHorizontal="30dp"
                android:paddingTop="5dp"

                android:paddingBottom="5dp"
                android:text="@string/repeat"
                android:textAlignment="center"
                android:textColor="#F702073A"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edt_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txv_repeat"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:fontFamily="@font/lobster"
                android:hint="@string/input_times"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="#F3F6C0DC"
                android:textColorHint="#88FAF9F9"


                android:layout_centerHorizontal="true"
                android:textSize="25sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/txv_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/shape"
                android:fontFamily="@font/lobster"

                android:paddingHorizontal="25dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/tv_rest"
                android:textAlignment="center"
                android:textColor="#F702073A"
                android:textSize="25sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txv_rest"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/edt_restTimeMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"


                    android:fontFamily="@font/lobster"
                    android:hint="@string/input_sec"
                    android:inputType="time"
                    android:textAlignment="center"
                    android:textColor="#F3F6C0DC"
                    android:textColorHint="#88FAF9F9"
                    android:textSize="25sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/txv_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_toEndOf="@+id/edt_restTimeMin"
                    android:fontFamily="@font/lobster"
                    android:text="@string/tv_dot"
                    android:textAlignment="center"
                    android:textColor="#f2b5d4"
                    android:textSize="25sp"
                    android:layout_marginTop="5dp"/>

                <EditText
                    android:id="@+id/edt_restTimeSec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txv_dot"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"

                    android:fontFamily="@font/lobster"
                    android:hint="@string/input_sec"
                    android:inputType="time"
                    android:textAlignment="center"
                    android:textColor="#F3F6C0DC"
                    android:textColorHint="#88FAF9F9"
                    android:textSize="25sp"

                    />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlo"
        app:layout_constraintVertical_bias="0.096"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/edt_timerMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_medium"
            android:inputType="numberDecimal"
            android:text="@string/input_sec"
            android:textAlignment="center"
            android:textColor="#F3B7D6"
            android:textSize="125sp" />

        <TextView
            android:id="@+id/tv_timerDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/edt_timerMin"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/tv_dot"
            android:textColor="#F3B7D6"
            android:textSize="125sp" />

        <EditText
            android:id="@+id/edt_timerSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="-3dp"
            android:layout_toEndOf="@+id/tv_timerDot"
            android:fontFamily="@font/roboto_medium"
            android:inputType="numberDecimal"
            android:text="@string/input_sec"
            android:textAlignment="center"
            android:textColor="#F3B7D6"
            android:textSize="125sp"

            />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@null"
        android:onClick="button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout3"
        app:layout_constraintVertical_bias="0.324"
        app:srcCompat="@drawable/icon_play_150" />

    <ImageButton
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="100dp"
        android:background="@null"
        android:visibility="gone"
        android:onClick="button_stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_pause"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_stop_100" />

    <ImageButton
        android:id="@+id/btn_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:background="@null"
        android:visibility="gone"
        android:onClick="button_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icon_pause_100" />

    <ImageButton
        android:id="@+id/btn_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:background="@null"
        android:onClick="button_resume"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_stop"
        app:srcCompat="@drawable/icon_resume_100" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menu_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu"
        android:background="@drawable/bottomnav_shape"
        app:itemIconTint="@color/nav_color"
        app:itemTextColor="@color/nav_color"
        >

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>